[gd_scene load_steps=11 format=2]

[ext_resource path="res://AxisGreen.tres" type="Material" id=1]
[ext_resource path="res://AxisBlue.tres" type="Material" id=2]
[ext_resource path="res://AxisRed.tres" type="Material" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
as_normalmap = true
noise = SubResource( 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0.588235, 0, 1 )
albedo_texture = ExtResource( 4 )
normal_enabled = true
normal_scale = 1.0
normal_texture = SubResource( 2 )

[sub_resource type="ProceduralSky" id=4]
ground_bottom_color = Color( 0.270588, 0.345098, 0.423529, 1 )

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )
auto_exposure_enabled = true
ssao_enabled = true
glow_enabled = true

[node name="Main" type="Spatial"]
script = ExtResource( 5 )

[node name="CoordinateAxes" type="Spatial" parent="."]

[node name="XAxis" type="Spatial" parent="CoordinateAxes"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )

[node name="AxisFrame" type="Spatial" parent="CoordinateAxes/XAxis"]

[node name="AxisBody" type="CSGCylinder" parent="CoordinateAxes/XAxis/AxisFrame"]
radius = 0.1
height = 10.0
material = ExtResource( 3 )

[node name="AxisHead" type="CSGCylinder" parent="CoordinateAxes/XAxis/AxisFrame"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.18557e-07, 5, 0 )
radius = 0.5
cone = true
material = ExtResource( 3 )

[node name="YAxis" type="Spatial" parent="CoordinateAxes"]

[node name="AxisFrame" type="Spatial" parent="CoordinateAxes/YAxis"]

[node name="AxisBody" type="CSGCylinder" parent="CoordinateAxes/YAxis/AxisFrame"]
radius = 0.1
height = 10.0
material = ExtResource( 1 )

[node name="AxisHead" type="CSGCylinder" parent="CoordinateAxes/YAxis/AxisFrame"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
radius = 0.5
cone = true
material = ExtResource( 1 )

[node name="ZAxis" type="Spatial" parent="CoordinateAxes"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )

[node name="AxisFrame" type="Spatial" parent="CoordinateAxes/ZAxis"]

[node name="AxisBody" type="CSGCylinder" parent="CoordinateAxes/ZAxis/AxisFrame"]
radius = 0.1
height = 10.0
material = ExtResource( 2 )

[node name="AxisHead" type="CSGCylinder" parent="CoordinateAxes/ZAxis/AxisFrame"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -2.18557e-07 )
radius = 0.5
cone = true
material = ExtResource( 2 )

[node name="Objects" type="Spatial" parent="CoordinateAxes"]

[node name="ObjectFrame" type="Spatial" parent="CoordinateAxes/Objects"]

[node name="CSGBox" type="CSGBox" parent="CoordinateAxes/Objects/ObjectFrame"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
width = 3.0
height = 1.0
material = SubResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="UI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPanelContainer" type="PanelContainer" parent="UI/HBoxContainer"]
margin_right = 201.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer/LeftPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 194.0
margin_bottom = 593.0

[node name="PanelContainer" type="PanelContainer" parent="UI/HBoxContainer/LeftPanelContainer/VBoxContainer"]
margin_right = 187.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer/LeftPanelContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 180.0
margin_bottom = 579.0

[node name="Label" type="Label" parent="UI/HBoxContainer/LeftPanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 173.0
margin_bottom = 14.0
text = "Coordinate system:"

[node name="CoordinateSystemList" type="ItemList" parent="UI/HBoxContainer/LeftPanelContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 173.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "ENU", null, false, "OpenSim", null, false ]

[node name="ReferenceRect" type="ReferenceRect" parent="UI/HBoxContainer"]
margin_left = 205.0
margin_right = 810.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="RightPanelContainer" type="PanelContainer" parent="UI/HBoxContainer"]
margin_left = 814.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer/RightPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 203.0
margin_bottom = 593.0

[node name="PanelContainer" type="PanelContainer" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer"]
margin_right = 196.0
margin_bottom = 136.0

[node name="CurrentRotationContainer" type="VBoxContainer" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 189.0
margin_bottom = 129.0

[node name="Label" type="Label" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer"]
margin_right = 182.0
margin_bottom = 14.0
text = "Current rotation:"

[node name="CurrentRotationGrid" type="GridContainer" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer"]
margin_top = 18.0
margin_right = 182.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="El11" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer/CurrentRotationGrid"]
margin_right = 58.0
margin_bottom = 24.0
editable = false

[node name="El12" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer/CurrentRotationGrid"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 24.0
editable = false

[node name="El13" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer/CurrentRotationGrid"]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 24.0
editable = false

[node name="El21" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer/CurrentRotationGrid"]
margin_top = 28.0
margin_right = 58.0
margin_bottom = 52.0
editable = false

[node name="El22" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer/CurrentRotationGrid"]
margin_left = 62.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 52.0
editable = false

[node name="El23" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer/CurrentRotationGrid"]
margin_left = 124.0
margin_top = 28.0
margin_right = 182.0
margin_bottom = 52.0
editable = false

[node name="El31" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer/CurrentRotationGrid"]
margin_top = 56.0
margin_right = 58.0
margin_bottom = 80.0
editable = false

[node name="El32" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer/CurrentRotationGrid"]
margin_left = 62.0
margin_top = 56.0
margin_right = 120.0
margin_bottom = 80.0
editable = false

[node name="El33" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer/CurrentRotationGrid"]
margin_left = 124.0
margin_top = 56.0
margin_right = 182.0
margin_bottom = 80.0
editable = false

[node name="ButtonResetCurrentRotation" type="Button" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer"]
margin_top = 102.0
margin_right = 182.0
margin_bottom = 122.0
text = "Reset current rotation"

[node name="PanelContainer2" type="PanelContainer" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 196.0
margin_bottom = 324.0

[node name="TargetRotationContainer" type="VBoxContainer" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 189.0
margin_bottom = 177.0

[node name="Label2" type="Label" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer"]
margin_right = 182.0
margin_bottom = 14.0
text = "Target rotation:"

[node name="TargetRotationGrid" type="GridContainer" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer"]
margin_top = 18.0
margin_right = 182.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="El11" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/TargetRotationGrid"]
margin_right = 58.0
margin_bottom = 24.0

[node name="El12" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/TargetRotationGrid"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 24.0

[node name="El13" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/TargetRotationGrid"]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 24.0

[node name="El21" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/TargetRotationGrid"]
margin_top = 28.0
margin_right = 58.0
margin_bottom = 52.0

[node name="El22" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/TargetRotationGrid"]
margin_left = 62.0
margin_top = 28.0
margin_right = 120.0
margin_bottom = 52.0

[node name="El23" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/TargetRotationGrid"]
margin_left = 124.0
margin_top = 28.0
margin_right = 182.0
margin_bottom = 52.0

[node name="El31" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/TargetRotationGrid"]
margin_top = 56.0
margin_right = 58.0
margin_bottom = 80.0

[node name="El32" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/TargetRotationGrid"]
margin_left = 62.0
margin_top = 56.0
margin_right = 120.0
margin_bottom = 80.0

[node name="El33" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/TargetRotationGrid"]
margin_left = 124.0
margin_top = 56.0
margin_right = 182.0
margin_bottom = 80.0

[node name="ButtonCopyCurrent" type="Button" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer"]
margin_top = 102.0
margin_right = 182.0
margin_bottom = 122.0
text = "Copy from current rotation"

[node name="ButtonCopyFromClipboard" type="Button" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer"]
margin_top = 126.0
margin_right = 182.0
margin_bottom = 146.0
text = "Copy from clipboard"

[node name="ButtonResetTargetRotation" type="Button" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer"]
margin_top = 150.0
margin_right = 182.0
margin_bottom = 170.0
text = "Reset target rotation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer3" type="PanelContainer" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 196.0
margin_bottom = 454.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 189.0
margin_bottom = 119.0

[node name="ButtonRotate" type="Button" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
margin_right = 182.0
margin_bottom = 20.0
text = "Rotate object"

[node name="CheckButton" type="CheckButton" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
margin_top = 24.0
margin_right = 182.0
margin_bottom = 64.0
pressed = true
text = "Animated"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
margin_top = 68.0
margin_right = 182.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer3/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Animation speed:"

[node name="AnimSpeedLabel" type="LineEdit" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer3/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "1"
editable = false

[node name="AnimSpeedSlider" type="HSlider" parent="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
margin_top = 96.0
margin_right = 182.0
margin_bottom = 112.0
max_value = 10.0
value = 1.0

[node name="CameraOffsetX" type="Spatial" parent="."]

[node name="CameraOffsetY" type="Spatial" parent="CameraOffsetX"]

[node name="Camera" type="Camera" parent="CameraOffsetX/CameraOffsetY"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[connection signal="item_selected" from="UI/HBoxContainer/LeftPanelContainer/VBoxContainer/PanelContainer/VBoxContainer/CoordinateSystemList" to="." method="_on_CoordinateSystemList_item_selected"]
[connection signal="pressed" from="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer/CurrentRotationContainer/ButtonResetCurrentRotation" to="." method="_on_ButtonResetCurrentRotation_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/ButtonCopyCurrent" to="." method="_on_ButtonCopyCurrent_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/ButtonCopyFromClipboard" to="." method="_on_ButtonCopyFromClipboard_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer2/TargetRotationContainer/ButtonResetTargetRotation" to="." method="_on_ButtonResetTargetRotation_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer3/VBoxContainer/ButtonRotate" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer3/VBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="UI/HBoxContainer/RightPanelContainer/VBoxContainer/PanelContainer3/VBoxContainer/AnimSpeedSlider" to="." method="_on_AnimSpeedSlider_value_changed"]
